updated but not finished
updated but not finished

--- a/Etch a sketch.html
+++ b/Etch a sketch.html
@@ -8,6 +8,10 @@
     <title>Etch a sketch Game</title>
 </head>
 <body>
+
+    <button id="new-grid">New-Grid</button>
+    <button id="reset-btn">CLEAR</button>
+    <div id="container"></div>
     
 </body>
 </html>
