--- a/Etch a sketch.html
+++ b/Etch a sketch.html
@@ -9,9 +9,16 @@
 </head>
 <body>
 
-    <button id="new-grid">New-Grid</button>
-    <button id="reset-btn">CLEAR</button>
+    <div id="holder">
+
+    <div id="btn-container">
+        <button id="new-grid">New-Grid</button>
+        <button id="reset-btn">CLEAR</button>
+    </div>
+    
     <div id="container"></div>
+
+    </div>
     
 </body>
 </html>
